--- a/application.yml
+++ b/application.yml
@@ -1,15 +1,5 @@
 spring:
-  profiles:
-    active: dev
-
-#生产环境
-spring：
-    application: 
-        name:  abcmsc-config-dev
-    profiles: dev    
-
-#测试环境
-spring：
-    application: 
-        name:  abcmsc-config-test
-    profiles: test  
+  application:
+    name: lanhuigu-config-dev
+server:
+  port: 9005
