--- a/application.yml
+++ b/application.yml
@@ -6,7 +6,7 @@ spring:
 #开发环境
 spring:
     application:
-        name: abc-dev
+        name: abc-config-dev
     profiles: dev
 
 
@@ -14,5 +14,5 @@ spring:
 #开发环境
 spring:
   application:
-    name: abc-pro
-  profiles: pro
+    name: abc-config-test
+  profiles: test
