--- a/dynamiczuul-dev.yml
+++ b/dynamiczuul-dev.yml
@@ -1,5 +1,5 @@
 server:
-  port: 19002   #9001  
+  port: 9001   #9001  
 #商品服务路由
 zuul:
   routes:
@@ -16,7 +16,7 @@ zuul:
       serviceId: consumer-service
   #      http://localhost:9001/api/consumer/gateway/products?username=zhangning
   #zuul通用配置
-  prefix: /api     #前缀
+  #prefix: /api     #前缀
   retryable: true  #开启路由重试
   ignored-services: "*"  #zuul默认为所有服务开启默认的路由，为了服务安全，此处关闭  *就是忽略所有服务
 
