最后读的是github上的  dynamiczuul-dev.yml  只有路由放在git上动态路由 #商品服务路由
最后读的是github上的  dynamiczuul-dev.yml  只有路由放在git上动态路由
#商品服务路由

--- a/dynamiczuul-dev.yml
+++ b/dynamiczuul-dev.yml
@@ -1,3 +1,8 @@
+server:
+  port: 9001        #  9001
+spring:
+  application:
+    name: dynamiczuul   #最后读的是github上的  dynamiczuul-dev.yml  只有路由放在git上动态路由
 #商品服务路由
 zuul:
   routes:
