动态路由测试
动态路由测试

--- a/dynamiczuul-dev.yml
+++ b/dynamiczuul-dev.yml
@@ -8,7 +8,7 @@ zuul:
   routes:
     #路由服务2--product-server
     product-server:
-      path: /product-gateway/**
+      path: /product/gateway/**
       #普通路由
       #url: http://localhost:2100/
       #面向服务
@@ -19,7 +19,7 @@ zuul:
       serviceId: consumer-service
   #      http://localhost:9001/api/consumer/gateway/products?username=zhangning
   #zuul通用配置
-  #prefix: /api     #前缀
+  prefix: /api     #前缀
   retryable: true  #开启路由重试
   ignored-services: "*"  #zuul默认为所有服务开启默认的路由，为了服务安全，此处关闭  *就是忽略所有服务
 
