--- a/dynamiczuul-dev.yml
+++ b/dynamiczuul-dev.yml
@@ -14,7 +14,7 @@ zuul:
   routes:
     #路由服务2--product-server
     product-server:
-      path: /product/gateway/**
+      path: /product/**
       #普通路由
       #url: http://localhost:2100/
       #面向服务
@@ -37,4 +37,4 @@ management:
         # 配置刷新地址：POST http://127.0.0.1:9000/actuator/refresh
         include: "*"
 webconfig:
-  nname: zhanghaining-xiugai-test
+  nname: zhanghaining-xiugai-test007
